@@ -233,7 +233,7 @@ def dependencies(target):
         ffmpeg_options = {}
 
     return (('ffmpeg-cdist', '1d4a1a4', ffmpeg_options),
-            ('libdcp', '079d5ca'),
+            ('libdcp', 'd23e6e1'),
             ('libsub', 'ef7c2ec'))
 
 def configure_options(target):
