@@ -1,3 +1,7 @@
+2016-10-31  c.hetherington  <cth@carlh.net>
+
+	* Fix failure to resume encodes when using encryption (#980).
+
 2016-10-29  Carl Hetherington  <cth@carlh.net>
 
 	* Updated de_DE translation from Carsten Kurz.
